--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -46,6 +47,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sanity": "^4.15.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
