--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "motion": "^12.23.26",
-    "next": "15.2.4",
+    "next": "^15.5.9",
     "next-sanity": "^11.6.6",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.16",
     "nodemailer": "^7.0.10",
     "ogl": "^1.0.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -64,7 +64,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.2.6",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
